Fixed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -4,9 +4,14 @@ body {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
+#game-board {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #game-board img {
-    width: 25%;
-    height: 25%;
+    width: 10%;
+    height: 10%;
     padding: 5px;
     box-sizing: border-box;
 }
